# School

./: .gitmodules  BLG242 - Logic Circuits Laboratory  CMakeLists.txt  Food.cpp  Food.h  Ingredient.cpp  Ingredient.h  Polynomial.h  Polynomial.txt  Product.cpp  Product.h  README.md  Stock.cpp  Stock.h  Vector.h  assignment2.cpp  main.cpp  stock.txt
BGL202E - NUMERICAL METHODS in CE/Homeworks/HW1/: hw1.docx  hw1q4.m
BGL202E - NUMERICAL METHODS in CE/Homeworks/HW2/: hw2q1.m
BGL202E - NUMERICAL METHODS in CE/Homeworks/HW3/: hw2.m  hw2_3.m  hw3.docx
BGL202E - NUMERICAL METHODS in CE/Homeworks/HW4/: QUESTIONv1.docx  QUESTIONv3.docx  hw3.docx  q4.m
BGL202E - NUMERICAL METHODS in CE/Ninova Files/Class Files/: Midterm Seating Plan  Recitation 3  SyllabusBLG202E-2019Spring.pptx
BGL202E - Numerical Methods in CE/Homeworks/HW2/: hw2q2.m
BGL202E - Numerical Methods in CE/Homeworks/HW4/: QUESTION.docx
BGL202E - Numerical Methods in CE/Ninova Files/Class Files/: Final exam seating plan
BLG101E - Intr. to Information Systems/Homeworks/: Assignment1EvaluationCriteriaBLG101E.xlsx  Assignment2EvaluationCriteriaBLG101E.xlsx
BLG101E - Intr. to Information Systems/Slides/: CompositeTypes.html
BLG101E - Intr. to Information Systems/Slides/CompositeTypes_files/: kirlent-revealjs.css
BLG112E - Discrete Mathematics/Exams - Quizzes/Final/: Sample_Final
BLG112E - Discrete Mathematics/Exams - Quizzes/Midterm/: Sample_Midterm_1
BLG112E - Discrete Mathematics/Ninova Files/Class Files/: Course handout  Final Exam Seating Plan
(+122 files in other folders)
